--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ API_BASE_URL=
 SWAGGER_API_URL=
 BEARER_TOKEN=
 API_KEY=
-SCHOOL="Pender County Schools"
-SCHOOL_WELCOME_MESSAGE="Welcome to the Pender County Schools credential service!"
+SCHOOL="New Hanover County Schools"
+SCHOOL_WELCOME_MESSAGE="Welcome to the New Hanover County Schools credential service!"
 ISSUE_STUDENT_ID_MESSAGE="We are sending you your student ID credential.  You will be able to use this to prove that you are a current student at your school. Click View Offer and Accept to receive your Student ID."
 ISSUE_STUDENT_TRANSCRIPT_MESSAGE="We have sent your transcripts.  You will be able to use this to demonstrate your scholastic accomplishments. Click View Offer and Accept to receive your Transcript."
 REQUEST_STUDENT_ID_VERIFICATION_MESSAGE="We need to verify your student ID."
