--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,7 @@ services:
       retries: 5
 
   node:
-    image: ghcr.io/brogleyr/base-controller-node:pender # Use your GHCR image
+    image: ghcr.io/brogleyr/base-controller-node:nhcs # Use your GHCR image
     container_name: base-controller-app
     ports:
       - "3000:3000" # Expose the Node.js app on port 3000
